--- a/gmueserei/static/gm/css/personal.css
+++ b/gmueserei/static/gm/css/personal.css
@@ -1,5 +1,5 @@
 .juntagrico_logo {
-    background: url(/static/img/juntagrico.png) 0 0px;
+    background: url(/static/gm/img/logo.png) 0 0px;
     display: inline-block;
     width: 580px;
     height: 161px;
