--- a/gmueserei/static/gm/css/personal.css
+++ b/gmueserei/static/gm/css/personal.css
@@ -1,5 +1,6 @@
 .juntagrico_logo {
     background: url(/static/gm/img/logo.png) 0 0px;
+    background-size: auto;
     display: inline-block;
     width: 580px;
     height: 161px;
