--- a/gmueserei/static/gm/css/personal.css
+++ b/gmueserei/static/gm/css/personal.css
@@ -7,3 +7,27 @@
     height: 161px;
 }
 
+/****************************************/
+/* Settings for Gmueserei look and feel */
+
+html, body {
+  font-family: 'Raleway', 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+  color: #5d4a3e;
+  background-color: #f4f1ed;
+}
+
+
+/* mark tables */
+tr.odd {
+  background-color: #f1f1f1;
+}
+
+tr.even {
+  background-color: transparent;
+}
+
+
+/* activity list */
+div.activity-area-list-element {
+padding-bottom: 2em;
+}
