--- a/gmueserei/static/gm/css/gmueserei.css
+++ b/gmueserei/static/gm/css/gmueserei.css
@@ -9,11 +9,11 @@ html, body {
 
 /* mark tables */
 tr.odd {
-  background-color: #f1f1f1;
+  background-color: #f1f1f1 !important;
 }
 
 tr.even {
-  background-color: #fefefe;
+  background-color: #fefefe !important;
 }
 
 td {
