--- a/gmueserei/templates/mails/email.html
+++ b/gmueserei/templates/mails/email.html
@@ -26,8 +26,8 @@
     </tr>
     <tr>
         <td colspan="3" style="padding-top:25px;">
-            <a href="http://{% config "server_url" %}">
-                {% config "server_url" %}
+            <a href="{% organisation_website "url" %}">
+                {% organisation_website "name" %}
             </a>
         </td>
     </tr>
