--- a/gmueserei/templates/mails/email.html
+++ b/gmueserei/templates/mails/email.html
@@ -3,13 +3,13 @@
 @media screen {
    @font-face{
     font-family: 'Source Sans Pro Light';
-    src: url('http://{% config "server_url" %}/static/fonts/SourceSansPro-Light.ttf') format('truetype');
+    src: url('{% organisation_website "url" %}/static/fonts/SourceSansPro-Light.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
    }
    @font-face {
     font-family: 'Source Sans Pro Regular';
-    src: url('http://{% config "server_url" %}/static/fonts/SourceSansPro-Regular.ttf') format('truetype');
+    src: url('{% organisation_website "url" %}/static/fonts/SourceSansPro-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
